# pm_security

./: .gitignore  LICENSE  README.md  pyproject.toml
data/labeled/driving/: README.roboflow.txt  data.yaml
data/labeled/driving/test/labels/: -1-_jpg.rf.5qDm61Jytkh3qz6S6hZf.txt  -2022-05-26-102911_2_jpg.rf.flWpjcSngWRZtYB78y07.txt  -2022-05-26-105348_0_jpg.rf.bTHI2Uh4h2JJmU43FpFx.txt  00000171_jpg.rf.0gEJZFTYy1fFiLXhMXvI.txt  00000216_jpg.rf.oKJzmg4OFMISWQaYgvR9.txt  00001453_jpg.rf.AC1zoINN31No3DQY7xeR.txt  0193_jpg.rf.CUuCWdV6k8pKzhHcZDSW.txt  0293_jpg.rf.UUonYEWHz8Pdzo1t8oKw.txt  1223311459-jpg-0_2_jpg.rf.PGPixmnOpWbR6Y1p9jWd.txt  12_flip_jpg.rf.qWlmT3Q0RvRC9Dloe5c8.txt  14764_8748_138_7_jpg.rf.9JC0WUL4Mqr3q2WMzCtX.txt  190504130636-lime-scooter-paris_0_jpg.rf.oyLkvNL4Ndo4Jwq1Vjho.txt  190504130636-lime-scooter-paris_1_jpg.rf.AEzdp99n0Yvj1ZRNeZPW.txt  21_jpg.rf.mn21kzuSi3NzBaJ46rQQ.txt  22_flip_jpg.rf.c3ncyL9TDdvC80KIuwLg.txt  25_jpg.rf.FpZ5DOQFOwQ1GMv7RBzh.txt  26_jpg.rf.aYi13HtebxONYJiF1cHs.txt  (+49 more)
data/labeled/parking/: README.roboflow.txt
data/labeled/parking/coco/: README.dataset.txt  README.roboflow.txt  delete_id0.py
data/labeled/parking/yolo/: data.yaml
docs/: Driving_Layer1.md  Driving_Layer2.md  algorithm_logic.md  model_training.md
model/: best.pt 설명  best.pt 설명.md
model/driving/: best.pt 설명.md
model/parking/: gdino_config.py  test_base_gdino_via_api.ipynb  train_and_test_gdino.ipynb  train_val_test_gdino.py  train_val_test_gdino_via_api.py
src/util/: find_dupe.py  to_jpg.py
util/: extract_frames.py  find_dupe.py  to_jpg.py
(+1173 files in other folders)
